hphp/hack/test/typecheck/global_const16.php.exp
ERROR: File "global_const16.php", line 3, characters 16-24:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "global_const16.php", line 3, characters 16-24:
Illegal constant value (Naming[2023])
