hphp/hack/test/typecheck/global_const16.php
<?hh // partial

const int X = ($x ==> $x);
